tweak: For inline "show on hover" buttons to avoid making the layout jump

--- a/app/assets/stylesheets/foundation_and_overrides.sass
+++ b/app/assets/stylesheets/foundation_and_overrides.sass
@@ -140,10 +140,19 @@ a.btn-normal, a.btn-saves, a.btn-nodanger
 a.btn-nodanger
   color: #000 !important
 
+// TODO: Rename to `.btn-small`.
 .btn-tiny
   padding: 0.15rem 0.3rem !important
   font-size: rem-calc(12) !important
   white-space: nowrap
+
+// For inline "show on hover" buttons to avoid making the layout jump.
+.btn-very-tiny
+  padding: 0.15rem 0.2rem !important
+  font-size: rem-calc(12) !important
+  margin-bottom: 0
+  white-space: nowrap
+  display: inline
 
 button.close-button
   background-color: transparent
